--- a/index.html
+++ b/index.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Best Invest - Вхід</title>
-    <link rel="stylesheet" href="style.css">
+	<base href="https://olegartiukh.github.io/landing/" /><meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<title>Best Invest - Вхід</title>
+	<link href="style.css" rel="stylesheet" />
 </head>
 <body>
-    <div class="container">
-        <img src="best_invest_logo.png" alt="Best Invest Logo" class="logo">
-        <h1>Best Invest</h1>
-        <p class="tagline">Почни заробляти на свою мрію разом з нами!</p>
-        <form class="login-form">
-            <label for="email">Електронна пошта</label>
-            <input type="email" id="email" name="email" required>
+<div class="container"><img alt="Best Invest Logo" class="logo" src="best_invest_logo.png" />
+<h1>Best Invest</h1>
 
-            <label for="password">Пароль</label>
-            <input type="password" id="password" name="password" required>
+<p class="tagline">Почни заробляти на свою мрію разом з нами!<br />
+Крок 1: <a href="https://forms.gle/Zbanbv6o8D2G5gYg7">Заповни форму</a></p>
 
-            <button type="submit">Увійти</button>
-        </form>
-    </div>
+<p class="tagline">Крок 2: Зайди на наш портал</p>
+
+<form action="" class="login-form"><input type="hidden" value="https://olegartiukh.github.io/landing/" /> <label for="email">Електронна пошта</label> <input id="email" required="" type="email" /> <label for="password">Пароль</label> <input id="password" required="" type="password" /><button type="submit">Увійти</button></form>
+</div>
 </body>
 </html>
+
