--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h1>Best Invest</h1>
 
 <p class="tagline">Почни заробляти на свою мрію разом з нами!<br />
-Крок 1: <a href="https://forms.gle/Zbanbv6o8D2G5gYg7">Заповни форму</a></p>
+Крок 1: <a href="https://forms.gle/Zbanbv6o8D2G5gYg7" target="_blank">Заповни форму</a></p>
 
 <p class="tagline">Крок 2: Зайди на наш портал</p>
 
